[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pypopart"
dynamic = ["version"]
description = "Pure Python implementation of PopART haplotype network analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pypopart --cov-report=html --cov-report=term"
